--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -23,7 +23,7 @@
     <header class="site-header">
         <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
           <div class="container">
-            <a class="navbar-brand mr-5" href="/">MeroKalam</a>
+            <a class="navbar-brand mr-5" style="color: rgb(173, 152, 255);font: 13px" href="/">MeroKalam</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
